Check GL context creation succeeds before using the context.

BUG=902684
TEST=bots
R=piman@chromium.org

Change-Id: I0c7267b6c23313e9613d38ecdf399707cbd8b11c
Reviewed-on: https://chromium-review.googlesource.com/c/1338494
Commit-Queue: Zhenyao Mo <zmo@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608627}
Former-commit-id: 1f068a7da82b2c4a50ae262ac2429a61864bc7de